<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="@dimen/x60"
        android:layout_height="@dimen/y60"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:src="@drawable/set_style_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y55"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/set_ecgsenior_style"
        android:textColor="@color/text_white"
        android:textSize="@dimen/set_textsize_20sp" />

    <CheckBox
        android:id="@+id/setecg_senior_1min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/check_bg"
        android:text="@string/style_ecg_1min"
        android:textColor="@color/text_white"
        android:textSize="@dimen/set_textsize_20sp" />

    <CheckBox
        android:id="@+id/setecg_senior_24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/check_bg"
        android:text="@string/style_ecg_24h"
        android:textColor="@color/text_white"
        android:textSize="@dimen/set_textsize_20sp" />

</LinearLayout>